# zendesk_etl

./: .gitignore  last_sync_timestamp.txt  main.py  pyproject.toml
analyses/: check_db_conn.ipynb  data_exploration.ipynb  field_names.ipynb
config/: last_load_timestamp_organizations.txt  last_load_timestamp_users.txt  last_sync_timestamp.txt  last_sync_timestamp_tickets.txt  last_sync_timestamp_users.txt  last_transform_end_time_organizations.txt  last_transform_end_time_users.txt
config/hydra/: config.yaml
config/hydra/endpoint/: organizations.yaml  ticket_fields.yaml  tickets.yaml  users.yaml
etl/: DAG_USAGE.md  __init__.py  dag.py  extract.py  load.py  transform.py
etl/organizations/: __init__.py  extract.py  load.py  transform.py
etl/ticket_fields/: __init__.py  extract.py  load.py  transform.py
etl/tickets/: __init__.py  extract.py  load.py  transform.py
etl/users/: __init__.py  extract.py  load.py  transform.py
process_fields/: extract.py  transform.py
process_tickets/: extract.py
utils/: db_utils.py  extract_utils.py  load_utils.py  transform_utils.py
