[project]
name = "zendesk-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "prefect>=2.14.0",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=14.0.0",
    "requests>=2.32.5",
]
